# cpp-nix-experiment

./: .gitignore  CMakeLists.txt  README.md  build-run.sh  default.nix  flake.nix  luanch-foxglove.sh  main.cpp  openvsc.sh  result  run.sh  shell.nix
libraries/: httplib.nix
libraries/httplib/: flake.nix
libraries/spdlog/: flake.nix  fmtlib.nix
libraries/torch/: binary-hashes.nix  flake.nix  lib.nix
src/: main.cpp
src/driving/: navigation_thread.hpp
src/helpers/: torch_helper.hpp
src/image/: util.cpp  util.h
src/video/: inference_thread.hpp  video_manager.hpp
